# oil-gas-well-segmentation

./: .gitignore  README.md  pyproject.toml  train.py
.github/workflows/: ci.yaml
configs/: config.yaml
src/config/: schema.py
src/data/: dataloader.py  datamodule.py  dataset.py
src/engine/: ddp_utils.py  train.py  validate.py
src/losses/: __init__.py  combined_loss.py  dice.py  dice_loss.py  focal.py
src/metrics/: metrics.py  segmentation_metrics.py
src/models/: resunet.py
src/training/: lightning_module.py
src/utils/: callbacks.py  checkpoint.py  logger.py
tests/: test_loss.py  test_metrics.py  test_model.py  test_training.py
